Fix dark mode for textbook

--- a/src/pages/textbook/styles.less
+++ b/src/pages/textbook/styles.less
@@ -3,9 +3,8 @@
   margin-top: 12px;
 
   .chapter-panel-group {
-    background: #fff;
     background: @B100;
-    border-radius: 6px;
+    border-radius: 12px;
   }
 }
 
@@ -60,4 +59,45 @@
     margin: 8px 0 8px 0;
     padding: 20px 20px 16px 20px;
     width: 100%;
+}
+
+.rs-theme-dark {
+  .textbook-page {
+
+    .chapter-panel-group {
+      background: @B800-dark;
+    }
+  }
+
+  .textbook-card {
+    background: @B800-dark;
+  }
+
+  .code-text-panel {
+    background: @B700-dark;
+  }
+
+  .code-editor-iframe {
+    width:100%;
+    height:500px;
+    border:0;
+    border-radius: 4px;
+    overflow:hidden;
+  }
+
+  .mcq-form {
+    background: @B900-dark;
+    border-radius: 8px;
+    margin: 8px 0 8px 0;
+    padding: 24px;
+    width: 100%;
+  }
+
+  .question-card {
+    background: @B800-dark;
+    border-radius: 8px;
+    margin: 8px 0 8px 0;
+    padding: 20px 20px 16px 20px;
+    width: 100%;
+  }
 }
